<resources>
    <string name="app_name">Pacsi</string>
    <string name="send_to">Küldés</string>
    <string name="q1">Milyen sebességgel éri el a Földünket egy meteor?</string>
    <string name="q1a1">10–20 km/h</string>
    <string name="q1a2">15–65 km/s</string>
    <string name="q1a3">50–100 km/h</string>
    <string name="q1a4">215–265 km/s</string>
    <string name="q2">A vas mellett milyen fémet tartalmaz még a Gibeon meteorit?</string>
    <string name="q2a1">Arany</string>
    <string name="q2a2">Réz</string>
    <string name="q2a3">Nikkel</string>
    <string name="q2a4">Paládium</string>
    <string name="q3">Melyik kráter őrzi nyomát a dinók kihalását okozó becsapódásnak?</string>
    <string name="q3a1">Vredefort</string>
    <string name="q3a2">Barringer</string>
    <string name="q3a3">Chicxulub</string>
    <string name="q3a4">Ries</string>
    <string name="q4">Mi Galilei egyik legjelentősebb felfedezése?</string>
    <string name="q4a1">A Jupiter holdjai</string>
    <string name="q4a2">A távcső</string>
    <string name="q4a3">Az Uránusz</string>
    <string name="q4a4">A mérleg</string>
    <string name="q5">Mennyi idő alatt kerüli meg a Neptunusz a napot?</string>
    <string name="q5a1">165 év</string>
    <string name="q5a2">98 év</string>
    <string name="q5a3">12 év</string>
    <string name="q5a4">54 év</string>
    <string name="q6">Kik használták a csillagokat a tájékozódásra?</string>
    <string name="q6a1">Csillagászok</string>
    <string name="q6a2">Kereskedők</string>
    <string name="q6a3">Hajósok</string>
    <string name="q6a4">Királyok</string>
    <string name="q7">Mekkora a Hubble űrtávcső főtükre?</string>
    <string name="q7a1">2 méter</string>
    <string name="q7a2">3,4 méter</string>
    <string name="q7a3">4 méter</string>
    <string name="q7a4">2,4 méter</string>
    <string name="q8">Kiről kapta nevét a Hubble űrtávcső utódja?</string>
    <string name="q8a1">Newton</string>
    <string name="q8a2">James Webb</string>
    <string name="q8a3">Carl Sagan</string>
    <string name="q8a4">Stephen Hawking</string>
    <string name="q9">Mennyi galaxis lehet az univerzumban?</string>
    <string name="q9a1">10–20 millió</string>
    <string name="q9a2">10–20 milliárd</string>
    <string name="q9a3">150–170 milliárd</string>
    <string name="q9a4">150–170 billiárd</string>
    <string name="q10">Az Androméda galaxisból nézve a Földet, mit látnánk most?</string>
    <string name="q10a1">Első kőszerszámok</string>
    <string name="q10a2">Dinoszauruszok</string>
    <string name="q10a3">Piramisok</string>
    <string name="q10a4">Római gladiátorok</string>
    <string name="q11">Melyik rakétát használták az Apollo küldetéseknél?</string>
    <string name="q11a1">Saturn III</string>
    <string name="q11a2">Falcon 9</string>
    <string name="q11a3">Saturn V</string>
    <string name="q11a4">Gemini</string>
    <string name="q12">Mikor lépett először ember a Holdra?</string>
    <string name="q12a1">1969 Július 21.</string>
    <string name="q12a2">1969 Július 16.</string>
    <string name="q12a3">1961 Április 12.</string>
    <string name="q12a4">1972 December 11.</string>
    <string name="q13">Ki volt a holdjáró autók tervezésének vezetője?</string>
    <string name="q13a1">Eugene Cernan</string>
    <string name="q13a2">Pavlics Ferenc</string>
    <string name="q13a3">Farkas Bertalan</string>
    <string name="q13a4">Pete Conrad</string>
    <string name="q14">Mennyi lesz majd egy Mars utazás átlagos ideje?</string>
    <string name="q14a1">40–50 nap</string>
    <string name="q14a2">10–20 év</string>
    <string name="q14a3">1,5–2 év</string>
    <string name="q14a4">2,5–3 év</string>
    <string name="q15">Mi a neve a Falcon Heavy első utasának?</string>
    <string name="q15a1">Ironman</string>
    <string name="q15a2">Space Robot</string>
    <string name="q15a3">Starman</string>
    <string name="q15a4">Lajka</string>
    <string name="q16">Mi a neve a N  aprendszer legmagasabb hegycsúcsának?</string>
    <string name="q16a1">Columbia Hegy</string>
    <string name="q16a2">Grissom Hegy</string>
    <string name="q16a3">Olympus Hegy</string>
    <string name="q16a4">Chaffee Hegy</string>
    <string name="q17">Mi színezi vörösre a Mars felszínét?</string>
    <string name="q17a1">Vas-oxidok</string>
    <string name="q17a2">Réz</string>
    <string name="q17a3">Vörös iszap</string>
    <string name="q17a4">Napfény</string>
    <string name="q18">Mi segíti az Opportunity marsjárót a tájékozódásban?</string>
    <string name="q18a1">Letapogatók</string>
    <string name="q18a2">Navigációs kamera</string>
    <string name="q18a3">Hőérzékelők</string>
    <string name="q18a4">GPS</string>
    <string name="q19">Hogyan mozgatja az Opportunity marsjáró a műszereit?</string>
    <string name="q19a1">Mágnesekkel</string>
    <string name="q19a2">Kerekekkel</string>
    <string name="q19a3">Drónokkal</string>
    <string name="q19a4">Robotkarral</string>
    <string name="q20">Mióta dolgozik a Curiosity a Marson?</string>
    <string name="q20a1">2014</string>
    <string name="q20a2">2020</string>
    <string name="q20a3">2012</string>
    <string name="q20a4">2002</string>
    <string name="welcome">Üdvözöllek a Pannon Csillagda Űrközpontban</string>
    <string name="single">Egyéni Küldetés</string>
    <string name="multi">Csoportos küldetés</string>
    <string name="photo_main">Fotó album</string>
    <string name="info_main">Információk</string>
    <string name="pda1_1">Köszöntelek!
        \n \n
        Plútó vagyok, a Pannon Csillagda űrrobotja.
        Én segítelek a küldestésben, melynek célja a Mars bolygó meghódítása.
        &#128521;</string>
    <string name="pda1_2"> Küldetésünk a Pannon Csillagda első szintjén kezdődik.

        &#128640;
        \n \n
        Készen állsz?</string>
    <string name="pda1_3"> Nagyszerű!
        \n \n
        Ahhoz, hogy meghódítsuk a Marsot, izgalmas dolgokat kell megtudnunk a világűrről.
    </string>
    <string name="pda1_4"> Szerencsére itt minden kérdésre választ kaphatunk,
        csak végig kell járnunk a kiállításokat. &#128102;   </string>
    <string name="pda1_5"> Először a hullócsillagokkal ismerkedhetünk meg.
        Bár igen kicsik, mégis látványosak. Ezt a hatalmas sebességüknek köszönhetik. &#127776;</string>
    <string name="pda2_1"> Bizony, ez hihetetlen sebesség.
        Ilyen gyorsasággal 2 másodperc alatt Budapestre érnénk. </string>
    <string name="pda2_2">A nagyobb darabok akár a földet is elérhetik.
        Lehetnek kőből, ezeket nevezzük kőmeteoritnak,
        vagy fémekből, ők a vasmeteoritok.</string>
    <string name="pda2_3"> Egy ilyen vasmeteorit a Gibeon  meteorit is,
        melynek egy szép nagy darabját itt is láthatjuk.</string>
    <string name="pda3_1">Igen, ahogy a legtöbb vasmeteorit, a Gibeon is vas mellett leginkább
        nikkelt tartalmaz. A Gibeon nagyjából akkora volt, mint egy kisbusz, mikor a földünkkel találkozott.</string>
    <string name="pda3_2">A földünk néhányszor sokkal nagyobb darabokkal is találkozott.
        Az egészen nagy darabok komoly katasztrófákat is okozhatnak.</string>
    <string name="pda3_3">Egy ilyen nagyváros méretű darab okozta a dinók kihalását is.
        A megtalált kráter méretéből tudjuk, hogy akár 14 km széles is lehetett.</string>
    <string name="pda4_1">Bizony, egy ősi Azték városról kapta nevét, mely a Yucatán félsziget
        partjainál fekszik. A becsapódás miatt az akkori élet fele eltűnt a Földről.</string>
    <string name="pda4_2">Nagyszerű, most már rengeteg újdonságot tudunk a Naprendszer parányairól.
        Ideje folytatni utunkat!</string>
    <string name="pda4_3">Galileo Galileit a modern csillagászat szülőatyjának is nevezzük.
        Ezt a címet azzal érdemelte ki, hogy ő használta legelőször a távcsővet az
        égbolt megfigyelésére.</string>
    <string name="pda4_4">Rengeteg új felfedezés kötődik a nevéhez. Feljegyezte a Vénusz fázisait,
        a Hold krátereit, a napfoltokat és rájött, hogy a Tejút sávja valójában milliónyi csillag.</string>
    <string name="pda4_5">Az egyik legnagyobb felfedezése vezette rá, hogy valójában a Föld és a
        többi bolygó a Nap körül kering, és nem a Föld a mindenség középpontja.</string>
    <string name="pda5_1">Ez a felismerése végül a tudomány forradalmához vezetett. Ennek a
        forradalomnak köszönhető, hogy GPS segít minket az utakon, és okostelefonokat
        használhatunk. </string>
    <string name="pda5_2">Galileinek köszönhetően csillagközi lakóhelyünkről, a Naprendszerről is
        rengeteg újdonságot tudtunk meg. Ám a két utolsó bolygót nem ismerhette.</string>
    <string name="pda5_3">Az Uránusz felfedezéséhez már sokkal nagyobb távcsőre volt szükség.
        Az Uránusz szabálytalan mozgásából pedig néhány matematikus felfedezte a Neptunuszt.</string>
    <string name="pda5_4">Ő a legkülső bolygó. Kepler rájött arra, hogy minél távolabb van egy
        égitest a naptól, annál több idő mire egy teljes kört bejár a Nap körül.</string>
    <string name="pda6_1">Pontosan, mióta felfedüztük még csak egy teljes kört tett meg.</string>
    <string name="pda6_2">Folytathatjuk hát küldetésünket a Csillagda harmadik szintjén.
        Menjünk fel a falépcsőn és vágjunk bele!</string>
    <string name="pda6_3">Látod azt a hajókormányt? Forgassuk meg! Láthatjuk, hogy vele együtt
    fordul el a csillagtérkép. Az ilyen térképeket Planiszférának nevezzük.</string>
    <string name="pda6_4">A Planiszférát helyesen beállítva megmutatja, hogy éppen milyen
        csillagokat és csillagképeket figyelhetünk meg az égbolton. </string>
    <string name="pda6_5">A GPS előtt a tájékozódást a csillagok segítették. Pontos órákkal, és
        a megfelelő csillagtérképpel kiszámíthatjuk hol vagyunk a Földön.</string>
    <string name="pda7_1">A nagy felfedezések időszakában a csillagok mutattak írányt
        a hajósok számára. A navigátorok nélkülözhetetlen tagjai voltak a legénységnek.</string>
    <string name="pda7_2">Ma már Föld körül keringő műholdakat használunk a tájékozodáshoz.
        Ezt nevezzük GPS-nek. Ők biztosítják, hogy ne tévedhessünk el.</string>
    <string name="pda7_3">Másfajta műholdak is léteznek. A csillagászok speciális, keringő eszközöket
        használnak, hogy még jobb megfigyeléseket végezzenek. Ezeket nevezzük űrtávcsőveknek.</string>
    <string name="pda7_4">Legismertebb közülük a Hubble, mely 1990 óta járja űrbéli útját.
        Őt nem zavarja a légkör, ezért hatalmas tükrével lélegzetelállító képeket tud készíteni.</string>
    <string name="pda8_1">Igen, körülbelül olyan magas mint ez a terem. </string>
    <string name="pda8_2">A Hubble űrtávcső a látható fény tartományában dolgozik, ami azt jelenti,
        hogy a szívárványban megtalalhátó színek fényét képes észlelni. </string>
    <string name="pda8_3">Mellette dolgoznak még másfajta űrtávcsővek is, melyek más tartományokat
        figyelnek. Például infravörös, mikrohullám, rádióhullám vagy gamma sugárzás.</string>
    <string name="pda8_4">Ahogy a technológia fejlődik, egyre jobb űrtávcsőveket tudunk készíteni.
        Így mindig újabbakra cserélhetjük le a nyugdíjba vonuló eszközeinket.</string>
    <string name="pda9_1">Neki már 6,5 méter széles tükre van, így reményeink szerint a világegyetem
        újabb titkaira is fény derül majd a segítségével.</string>
    <string name="pda9_2">Ezeknek a csodálatos űrtávcsőveknek köszönhetően hihetetlen
        felefedezéseket tettünk az elmúlt évtizedekben.</string>
    <string name="pda9_3">Megtudtuk, milyen alakja van a galaxisunknak, megfigyelhettük távoli
        óriás csillagok robbanását, és rájöttünk, milyen hatalmas a világegyetem.</string>
    <string name="pda10_1">Hihetetlen! Nagyjából, mint ahány homokszemcse van egy hatalmas tengerparton.
        Ezek közül csupán egy a mi kozmikus lakóhelyünk: a Tejútrendszer.</string>
</resources>