<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/milky_way_bg"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawingCacheQuality="auto"
        android:indeterminateDrawable="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle_imageview"
        android:padding="5sp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/q1image"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_imageview"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/q1"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        fbutton:autoSizeTextType="uniform" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btnAnswer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/q1a1"
        android:textSize="20sp"
        fbutton:buttonColor="@color/fbutton_color_alizarin"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toTopOf="@+id/guideline2"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="btnClickAnswer1"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnAnswer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/q1a2"
        android:textSize="20sp"
        fbutton:buttonColor="@color/fbutton_color_alizarin"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/btnAnswer1"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="btnClickAnswer2"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnAnswer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/q1a3"
        android:textSize="20sp"
        fbutton:buttonColor="@color/fbutton_color_alizarin"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/btnAnswer2"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="btnClickAnswer3"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnAnswer4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/q1a4"
        android:textSize="20sp"
        fbutton:buttonColor="@color/fbutton_color_alizarin"
        fbutton:layout_constraintEnd_toEndOf="parent"
        fbutton:layout_constraintStart_toStartOf="parent"
        fbutton:layout_constraintTop_toBottomOf="@+id/btnAnswer3"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="btnClickAnswer4"/>

</androidx.constraintlayout.widget.ConstraintLayout>